--- a/about.html
+++ b/about.html
@@ -38,29 +38,34 @@
                     <p class="text-light opacity-25">2023 © Stratis Dermanoutsos</p>
                 </footer>
             </menu>
-            <div class="col-9 padding-body">
+            <div class="col padding-body">
                 <div class="row">
-                    <div class="col-6 padding-col text-center">
-                        <img src="./Image/my picture.png" class="img-thumbnail" alt="image paysage">
-                        <br>
-                        <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
-                                src="./Image/github-svgrepo-com 1.svg" alt="logo git"></a>
-                        <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
-                                src="./Image/linkedin-svgrepo-com 1.svg" alt="logo linkedin"></a>
-                        <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
-                                src="./Image/twitter-154-svgrepo-com 1.svg" alt="logo twitter"></a>
-                        <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
-                                src="./Image/stackoverflow-svgrepo-com 1.svg" alt="logo stackoverflow"></a>
-                        <br>
-                        <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
-                            src="./Image/figma-svgrepo-com 1.svg" alt="logo figma"></a>
-                        <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
-                            src="./Image/dribbble-dribble-dribbbble-svgrepo-com 1.svg" alt="logo dibbble"></a>
+                    <div class="col-lg padding-col text-center">
+                        <div>
+                            <img src="./Image/my picture.png" class="rounded" alt="image paysage">
+                        </div>
+                        <div class="mt-3">
+                            <a class="btn background-button me-1 rounded-3 p-2"
+                                href="https://github.com/MaximeRichard78/2CSSF" role="button"><img
+                                    src="./Image/github-svgrepo-com 1.svg" alt="logo git"></a>
+                            <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
+                                    src="./Image/linkedin-svgrepo-com 1.svg" alt="logo linkedin"></a>
+                            <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
+                                    src="./Image/twitter-154-svgrepo-com 1.svg" alt="logo twitter"></a>
+                            <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
+                                    src="./Image/stackoverflow-svgrepo-com 1.svg" alt="logo stackoverflow"></a>
+                            <div class="mt-2">
+                                <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
+                                        src="./Image/figma-svgrepo-com 1.svg" alt="logo figma"></a>
+                                <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
+                                        src="./Image/dribbble-dribble-dribbbble-svgrepo-com 1.svg"
+                                        alt="logo dibbble"></a>
+                            </div>
+                        </div>
 
-                        
 
                     </div>
-                    <div class="col-6 padding-col text-center">
+                    <div class="col-lg padding-col text-center">
                         <h1 class="pb-5 text-start">About me</h1>
                         <br>
                         <p class="text-start">I’m a <span class="text-green">Senior Software Developer</span> with an
