--- a/aboutthispage.html
+++ b/aboutthispage.html
@@ -17,18 +17,53 @@
                 <img src="./Image/SD logo.png" alt="logo SD">
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                      <a class="nav-link p-2 mb-2 text-start text-white" href="./index.html"><img src="./Image/house-solid 1.svg" class="pe-3" alt="icone maison">Home</a>
+                        <a class="nav-link p-2 mb-2 text-start text-white" href="./index.html"><img
+                                src="./Image/house-solid 1.svg" class="pe-3" alt="icone maison">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link p-2 mb-2 text-start text-white" href="./about.html"><img src="./Image/address-card-solid 1.svg" class="pe-3" alt="icone carte d'identité">About</a>
+                        <a class="nav-link p-2 mb-2 text-start text-white" href="./about.html"><img
+                                src="./Image/address-card-solid 1.svg" class="pe-3"
+                                alt="icone carte d'identité">About</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link p-2 mb-2 text-start text-white" href="./work.html"><img src="./Image/briefcase-solid 1.svg" class="pe-3" alt="icone malette">Work</a>
+                        <a class="nav-link p-2 mb-2 text-start text-white" href="./work.html"><img
+                                src="./Image/briefcase-solid 1.svg" class="pe-3" alt="icone malette">Work</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link p-2 mb-2 text-start text-white background-nav rounded-4" href="./aboutthispage.html"><img src="./Image/circle-info-solid 1.svg" class="pe-3" alt="icone info">About this page</a>
+                        <a class="nav-link p-2 mb-2 text-start text-white background-nav rounded-4"
+                            href="./aboutthispage.html"><img src="./Image/circle-info-solid 1.svg" class="pe-3"
+                                alt="icone info">About this page</a>
                     </li>
-                  </ul>
-                  <footer>
+                </ul>
+                <footer>
                     <p class="text-light opacity-25">2023 © Stratis Dermanoutsos</p>
-                  </footer>
+                </footer>
+            </menu>
+            <div class="col padding-body text-center">
+                <h1 class="mt-2 pb-5">About this page</h1>
+                <div class="pt-4">
+                    <p>This page was designed and built by me.</p>
+                    <p>I always enjoy constructive feedback, positive or negative, and improving my products based on
+                        that. This is no exception, so feel free to use the links bellow.</p>
+                    <p>The idea is to keep it as minimal as possible without missing on content.</p>
+                </div>
+                <div class="my-5 py-5">
+                    <a class="btn background-button me-1 rounded-3 p-2" href="https://github.com/MaximeRichard78/2CSSF"
+                        role="button"><img src="./Image/github-svgrepo-com 1.svg" alt="logo git"></a>
+                    <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
+                            src="./Image/figma-svgrepo-com 1.svg" alt="logo figma"></a>
+                    <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
+                            src="./Image/dribbble-dribble-dribbbble-svgrepo-com 1.svg" alt="logo dibbble"></a>
+                </div>
+                <footer>
+                    <a class="btn background-button me-1 rounded-3 p-2 text-green" href="#" role="button">Sponsor me on GitHub</a>
+                </footer>
+            </div>
+        </div>
+    </div>
+</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+
+</html>
