--- a/index.html
+++ b/index.html
@@ -13,73 +13,72 @@
 <body class="text-white">
   <div class="container ms-0 me-0">
     <div class="row">
-      <menu class="col-3 vh-100 text-center pt-4">
-        <img src="./Image/SD logo.png" alt="logo SD">
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link p-2 mb-2 text-start text-white background-nav rounded-4" href="./index.html"><img
-                src="./Image/house-solid 1.svg" class="pe-3" alt="icone maison">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link p-2 mb-2 text-start text-white" href="./about.html"><img
-                src="./Image/address-card-solid 1.svg" class="pe-3" alt="icone carte d'identité">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link p-2 mb-2 text-start text-white" href="./work.html"><img
-                src="./Image/briefcase-solid 1.svg" class="pe-3" alt="icone malette">Work</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link p-2 mb-2 text-start text-white" href="./aboutthispage.html"><img
-                src="./Image/circle-info-solid 1.svg" class="pe-3" alt="icone info">About this page</a>
-          </li>
-        </ul>
-        <footer>
-          <p class="text-light opacity-25">2023 © Stratis Dermanoutsos</p>
-        </footer>
+      <menu class="col-3 vh-100 text-center mb-0 pt-4">
+        <div class="d-flex flex-column justify-content-between h-100">
+          <div>
+            <img src="./Image/SD logo.png" alt="logo SD">
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                <a class="nav-link p-2 mb-2 text-start text-white background-nav rounded-4" href="./index.html"><img
+                    src="./Image/house-solid 1.svg" class="pe-3" alt="icone maison">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link p-2 mb-2 text-start text-white" href="./about.html"><img
+                    src="./Image/address-card-solid 1.svg" class="pe-3" alt="icone carte d'identité">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link p-2 mb-2 text-start text-white" href="./work.html"><img
+                    src="./Image/briefcase-solid 1.svg" class="pe-3" alt="icone malette">Work</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link p-2 mb-2 text-start text-white" href="./aboutthispage.html"><img
+                    src="./Image/circle-info-solid 1.svg" class="pe-3" alt="icone info">About this page</a>
+              </li>
+            </ul>
+          </div>
+          <footer>
+            <p class="text-light opacity-25">2023 © Stratis Dermanoutsos</p>
+          </footer>
+        </div>
       </menu>
-      <div class="col-9 padding-body">
+      <div class="col padding-body">
         <div class="row">
-          <div class="col-6 padding-col">
+          <div class="col-lg padding-col">
             <h1>Hi, I'm <span class="text-green">Stratis</span></h1>
             <h6 class="pb-5 text-light opacity-25">Welcome to my page</h6>
             <h6 class="pb-4 pt-5">I’m a <span class="text-green">Senior Software Developer</span> specialising in web
               and mobile apps.</h6>
             <h6 class="pb-4">In my free time, I am either contributing to Open-Source projects or working on my cars.
             </h6>
-            <h6>I love talking about the world, hobbies and especially code.</h6>
+            <h6>je suis une grosse merde, hobbies and especially code.</h6>
           </div>
-          <div class="col-6 padding-col text-center">
+          <div class="col-lg padding-col text-center">
             <h1 class="pb-5">Want to hire me?</h1>
             <br>
             <p class="pb-2">I strive to reply within an hour.</p>
             <a class="btn background-button text-white text-uppercase fw-bold mb-5" href="#" role="button"><img
                 src="./Image/email-svgrepo-com 1.svg" class="pe-2" alt="logo email">email</a>
-            <div class="row mb-5">
-              <div class="col">
-                <hr>
-              </div>
-              <div class="col">
-                <p>or</p>
-              </div>
-              <div class="col">
-                <hr>
-              </div>
+            <div class="d-flex align-items-center">
+              <hr class="col">
+              <p class="pt-3 px-4">or</p>
+              <hr class="col">
             </div>
-            <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
+            <a class="btn background-button me-1 rounded-3 p-2" href="https://fr.fiverr.com/" role="button"><img
                 src="./Image/fiverr-svgrepo-com 1.svg" alt="logo fiverr"></a>
-            <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
-                src="./Image/linkedin-svgrepo-com 1.svg" alt="logo email"></a>
-            <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
+            <a class="btn background-button me-1 rounded-3 p-2" href="https://fr.linkedin.com/" role="button"><img
+                src="./Image/linkedin-svgrepo-com 1.svg" alt="logo linkedin"></a>
+            <a class="btn background-button me-1 rounded-3 p-2" href="https://www.upwork.com/" role="button"><img
                 src="./Image/upwork-svgrepo-com 1.svg" alt="logo upwork"></a>
-            <a class="btn background-button rounded-3 p-2" href="#" role="button"><img
+            <a class="btn background-button rounded-3 p-2" href="https://www.fr.freelancer.com/" role="button"><img
                 src="./Image/freelancer-svgrepo-com 1.svg" alt="logo freelancer"></a>
           </div>
         </div>
       </div>
     </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 </html>
