--- a/work.html
+++ b/work.html
@@ -17,18 +17,81 @@
                 <img src="./Image/SD logo.png" alt="logo SD">
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                      <a class="nav-link p-2 mb-2 text-start text-white" href="./index.html"><img src="./Image/house-solid 1.svg" class="pe-3" alt="icone maison">Home</a>
+                        <a class="nav-link p-2 mb-2 text-start text-white" href="./index.html"><img
+                                src="./Image/house-solid 1.svg" class="pe-3" alt="icone maison">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link p-2 mb-2 text-start text-white" href="./about.html"><img src="./Image/address-card-solid 1.svg" class="pe-3" alt="icone carte d'identité">About</a>
+                        <a class="nav-link p-2 mb-2 text-start text-white" href="./about.html"><img
+                                src="./Image/address-card-solid 1.svg" class="pe-3"
+                                alt="icone carte d'identité">About</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link p-2 mb-2 text-start text-white background-nav rounded-4" href="./work.html"><img src="./Image/briefcase-solid 1.svg" class="pe-3" alt="icone malette">Work</a>
+                        <a class="nav-link p-2 mb-2 text-start text-white background-nav rounded-4"
+                            href="./work.html"><img src="./Image/briefcase-solid 1.svg" class="pe-3"
+                                alt="icone malette">Work</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link p-2 mb-2 text-start text-white" href="./aboutthispage.html"><img src="./Image/circle-info-solid 1.svg" class="pe-3" alt="icone info">About this page</a>
+                        <a class="nav-link p-2 mb-2 text-start text-white" href="./aboutthispage.html"><img
+                                src="./Image/circle-info-solid 1.svg" class="pe-3" alt="icone info">About this page</a>
                     </li>
-                  </ul>
-                  <footer>
+                </ul>
+                <footer>
                     <p class="text-light opacity-25">2023 © Stratis Dermanoutsos</p>
-                  </footer>
+                </footer>
+            </menu>
+            <div class="col padding-body text-center">
+                <h1 class="">Want to hire me?</h1>
+                <p>I strive to reply within an hour.</p>
+                <a class="btn background-button text-white text-uppercase fw-bold mb-4" href="#" role="button"><img
+                        src="./Image/email-svgrepo-com 1.svg" class="pe-2" alt="logo email">email</a>
+                <div class="row mb-2">
+                    <div class="col">
+                        <hr>
+                    </div>
+                    <div class="col">
+                        <p>or</p>
+                    </div>
+                    <div class="col">
+                        <hr>
+                    </div>
+                </div>
+                <div class="pb-5">
+                    <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
+                            src="./Image/fiverr-svgrepo-com 1.svg" alt="logo fiverr"></a>
+                    <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
+                            src="./Image/linkedin-svgrepo-com 1.svg" alt="logo email"></a>
+                    <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
+                            src="./Image/upwork-svgrepo-com 1.svg" alt="logo upwork"></a>
+                    <a class="btn background-button rounded-3 p-2" href="#" role="button"><img
+                            src="./Image/freelancer-svgrepo-com 1.svg" alt="logo freelancer"></a>
+                </div>
+                <h1 class="pt-5 pb-4">My experience so far</h1>
+                <div class="text-start">
+                    <h3>MODUS S.A. <span class="text-light opacity-25 h5">(1 yr 9 mos)</span></h3>
+                </div>
+                <div class="text-start mt-4 ms-4 ps-2 pt-2 pb-1 background-button rounded-4">
+                    <h5 class="text-green fw-normal">Senior .NET Developer</h5>
+                    <h6 class="text-light opacity-25">MAY 2023 - PRESENT (3 months)</h6>
+                    <p class="mb-0">
+                        Develops and maintains services handling business logic.
+                    </p>
+                    <p>
+                    Created both desktop and web applications for internal use by the company.
+                </p>
+            </div>
+            <div class="text-start mt-3 ms-4 ps-2 pt-2 pb-1 background-button rounded-4">
+                <h5>Full-Stack Software Developer</h5>
+            </div>
+            <div class="text-start mt-3">
+                <h3>Freelancer <span class="text-light opacity-25 h5">(9 mos)</span></h3>
+            </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
+</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+</html>
