--- a/aboutthispage.html
+++ b/aboutthispage.html
@@ -12,32 +12,33 @@
 
 <body class="text-white">
     <div class="container ms-0 me-0">
-        <div class="row">
-            <menu class="col-3 vh-100 text-center pt-4">
-                <img src="./Image/SD logo.png" alt="logo SD">
-                <ul class="nav flex-column">
-                    <li class="nav-item">
-                        <a class="nav-link p-2 mb-2 text-start text-white" href="./index.html"><img
-                                src="./Image/house-solid 1.svg" class="pe-3" alt="icone maison">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link p-2 mb-2 text-start text-white" href="./about.html"><img
-                                src="./Image/address-card-solid 1.svg" class="pe-3"
-                                alt="icone carte d'identité">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link p-2 mb-2 text-start text-white" href="./work.html"><img
-                                src="./Image/briefcase-solid 1.svg" class="pe-3" alt="icone malette">Work</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link p-2 mb-2 text-start text-white background-nav rounded-4"
-                            href="./aboutthispage.html"><img src="./Image/circle-info-solid 1.svg" class="pe-3"
-                                alt="icone info">About this page</a>
-                    </li>
-                </ul>
-                <footer>
-                    <p class="text-light opacity-25">2023 © Stratis Dermanoutsos</p>
-                </footer>
+      <div class="row">
+        <menu class="col-3 vh-100 text-center mb-0 pt-4">
+          <div class="d-flex flex-column justify-content-between h-100">
+            <div>
+              <img src="./Image/SD logo.png" alt="logo SD">
+              <ul class="nav flex-column">
+                <li class="nav-item">
+                  <a class="nav-link p-2 mb-2 text-start text-white" href="./index.html"><img
+                      src="./Image/house-solid 1.svg" class="pe-3" alt="icone maison">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link p-2 mb-2 text-start text-white" href="./about.html"><img
+                      src="./Image/address-card-solid 1.svg" class="pe-3" alt="icone carte d'identité">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link p-2 mb-2 text-start text-white" href="./work.html"><img
+                      src="./Image/briefcase-solid 1.svg" class="pe-3" alt="icone malette">Work</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link p-2 mb-2 text-start text-white background-nav rounded-4" href="./aboutthispage.html"><img
+                      src="./Image/circle-info-solid 1.svg" class="pe-3" alt="icone info">About this page</a>
+                </li>
+              </ul>
+            </div>
+            <footer>
+              <p class="text-light opacity-25">2023 © Stratis Dermanoutsos</p>
+            </footer>
             </menu>
             <div class="col padding-body text-center">
                 <h1 class="mt-2 pb-5">About this page</h1>
