--- a/about.html
+++ b/about.html
@@ -13,30 +13,34 @@
 <body class="text-white">
     <div class="container ms-0 me-0">
         <div class="row">
-            <menu class="col-3 vh-100 text-center pt-4">
-                <img src="./Image/SD logo.png" alt="logo SD">
-                <ul class="nav flex-column">
-                    <li class="nav-item">
-                        <a class="nav-link p-2 mb-2 text-start text-white" href="./index.html"><img
-                                src="./Image/house-solid 1.svg" class="pe-3" alt="icone maison">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link p-2 mb-2 text-start text-white background-nav rounded-4"
-                            href="./about.html"><img src="./Image/address-card-solid 1.svg" class="pe-3"
-                                alt="icone carte d'identité">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link p-2 mb-2 text-start text-white" href="./work.html"><img
-                                src="./Image/briefcase-solid 1.svg" class="pe-3" alt="icone malette">Work</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link p-2 mb-2 text-start text-white" href="./aboutthispage.html"><img
-                                src="./Image/circle-info-solid 1.svg" class="pe-3" alt="icone info">About this page</a>
-                    </li>
-                </ul>
-                <footer>
-                    <p class="text-light opacity-25">2023 © Stratis Dermanoutsos</p>
-                </footer>
+            <menu class="col-3 vh-100 text-center mb-0 pt-4">
+                <div class="d-flex flex-column justify-content-between h-100">
+                    <div>
+                        <img src="./Image/SD logo.png" alt="logo SD">
+                        <ul class="nav flex-column">
+                            <li class="nav-item">
+                                <a class="nav-link p-2 mb-2 text-start text-white" href="./index.html"><img
+                                        src="./Image/house-solid 1.svg" class="pe-3" alt="icone maison">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link p-2 mb-2 text-start text-white background-nav rounded-4"
+                                    href="./about.html"><img src="./Image/address-card-solid 1.svg" class="pe-3"
+                                        alt="icone carte d'identité">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link p-2 mb-2 text-start text-white" href="./work.html"><img
+                                        src="./Image/briefcase-solid 1.svg" class="pe-3" alt="icone malette">Work</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link p-2 mb-2 text-start text-white" href="./aboutthispage.html"><img
+                                        src="./Image/circle-info-solid 1.svg" class="pe-3" alt="icone info">About this
+                                    page</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <footer>
+                        <p class="text-light opacity-25">2023 © Stratis Dermanoutsos</p>
+                    </footer>
             </menu>
             <div class="col padding-body">
                 <div class="row">
@@ -45,19 +49,19 @@
                             <img src="./Image/my picture.png" class="rounded" alt="image paysage">
                         </div>
                         <div class="mt-3">
-                            <a class="btn background-button me-1 rounded-3 p-2"
+                            <a class="btn background-button m-1 rounded-3 p-2"
                                 href="https://github.com/MaximeRichard78/2CSSF" role="button"><img
                                     src="./Image/github-svgrepo-com 1.svg" alt="logo git"></a>
-                            <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
+                            <a class="btn background-button m-1 rounded-3 p-2" href="#" role="button"><img
                                     src="./Image/linkedin-svgrepo-com 1.svg" alt="logo linkedin"></a>
-                            <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
+                            <a class="btn background-button m-1 rounded-3 p-2" href="#" role="button"><img
                                     src="./Image/twitter-154-svgrepo-com 1.svg" alt="logo twitter"></a>
-                            <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
+                            <a class="btn background-button m-1 rounded-3 p-2" href="#" role="button"><img
                                     src="./Image/stackoverflow-svgrepo-com 1.svg" alt="logo stackoverflow"></a>
                             <div class="mt-2">
-                                <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
+                                <a class="btn background-button m-1 rounded-3 p-2" href="#" role="button"><img
                                         src="./Image/figma-svgrepo-com 1.svg" alt="logo figma"></a>
-                                <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
+                                <a class="btn background-button m-1 rounded-3 p-2" href="#" role="button"><img
                                         src="./Image/dribbble-dribble-dribbbble-svgrepo-com 1.svg"
                                         alt="logo dibbble"></a>
                             </div>
