--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               and mobile apps.</h6>
             <h6 class="pb-4">In my free time, I am either contributing to Open-Source projects or working on my cars.
             </h6>
-            <h6>je suis une grosse merde, hobbies and especially code.</h6>
+            <h6>I love talking about the world, hobbies and especially code.</h6>
           </div>
           <div class="col-lg padding-col text-center">
             <h1 class="pb-5">Want to hire me?</h1>
