--- a/work.html
+++ b/work.html
@@ -13,57 +13,57 @@
 <body class="text-white">
     <div class="container ms-0 me-0">
         <div class="row">
-            <menu class="col-3 vh-100 text-center pt-4">
-                <img src="./Image/SD logo.png" alt="logo SD">
-                <ul class="nav flex-column">
-                    <li class="nav-item">
-                        <a class="nav-link p-2 mb-2 text-start text-white" href="./index.html"><img
-                                src="./Image/house-solid 1.svg" class="pe-3" alt="icone maison">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link p-2 mb-2 text-start text-white" href="./about.html"><img
-                                src="./Image/address-card-solid 1.svg" class="pe-3"
-                                alt="icone carte d'identité">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link p-2 mb-2 text-start text-white background-nav rounded-4"
-                            href="./work.html"><img src="./Image/briefcase-solid 1.svg" class="pe-3"
-                                alt="icone malette">Work</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link p-2 mb-2 text-start text-white" href="./aboutthispage.html"><img
-                                src="./Image/circle-info-solid 1.svg" class="pe-3" alt="icone info">About this page</a>
-                    </li>
-                </ul>
-                <footer>
-                    <p class="text-light opacity-25">2023 © Stratis Dermanoutsos</p>
-                </footer>
+            <menu class="col-3 vh-100 text-center mb-0 pt-4">
+                <div class="d-flex flex-column justify-content-between h-100">
+                    <div>
+                        <img src="./Image/SD logo.png" alt="logo SD">
+                        <ul class="nav flex-column">
+                            <li class="nav-item">
+                                <a class="nav-link p-2 mb-2 text-start text-white" href="./index.html"><img
+                                        src="./Image/house-solid 1.svg" class="pe-3" alt="icone maison">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link p-2 mb-2 text-start text-white" href="./about.html"><img
+                                        src="./Image/address-card-solid 1.svg" class="pe-3"
+                                        alt="icone carte d'identité">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link p-2 mb-2 text-start text-white background-nav rounded-4"
+                                    href="./work.html"><img src="./Image/briefcase-solid 1.svg" class="pe-3"
+                                        alt="icone malette">Work</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link p-2 mb-2 text-start text-white" href="./aboutthispage.html"><img
+                                        src="./Image/circle-info-solid 1.svg" class="pe-3" alt="icone info">About this
+                                    page</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <footer>
+                        <p class="text-light opacity-25">2023 © Stratis Dermanoutsos</p>
+                    </footer>
             </menu>
             <div class="col padding-body text-center">
                 <h1 class="">Want to hire me?</h1>
                 <p>I strive to reply within an hour.</p>
                 <a class="btn background-button text-white text-uppercase fw-bold mb-4" href="#" role="button"><img
                         src="./Image/email-svgrepo-com 1.svg" class="pe-2" alt="logo email">email</a>
-                <div class="row mb-2">
-                    <div class="col">
-                        <hr>
-                    </div>
-                    <div class="col">
-                        <p>or</p>
-                    </div>
-                    <div class="col">
-                        <hr>
-                    </div>
+                <div class="d-flex align-items-center">
+                    <div class="col-2"></div>
+                    <hr class="col">
+                    <p class="pt-3 px-4">or</p>
+                    <hr class="col">
+                    <div class="col-2"></div>
                 </div>
                 <div class="pb-5">
-                    <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
+                    <a class="btn background-button me-1 rounded-3 p-2" href="https://fr.fiverr.com/" role="button"><img
                             src="./Image/fiverr-svgrepo-com 1.svg" alt="logo fiverr"></a>
-                    <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
-                            src="./Image/linkedin-svgrepo-com 1.svg" alt="logo email"></a>
-                    <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
-                            src="./Image/upwork-svgrepo-com 1.svg" alt="logo upwork"></a>
-                    <a class="btn background-button rounded-3 p-2" href="#" role="button"><img
-                            src="./Image/freelancer-svgrepo-com 1.svg" alt="logo freelancer"></a>
+                    <a class="btn background-button me-1 rounded-3 p-2" href="https://fr.linkedin.com/"
+                        role="button"><img src="./Image/linkedin-svgrepo-com 1.svg" alt="logo linkedin"></a>
+                    <a class="btn background-button me-1 rounded-3 p-2" href="https://www.upwork.com/"
+                        role="button"><img src="./Image/upwork-svgrepo-com 1.svg" alt="logo upwork"></a>
+                    <a class="btn background-button rounded-3 p-2" href="https://www.fr.freelancer.com/"
+                        role="button"><img src="./Image/freelancer-svgrepo-com 1.svg" alt="logo freelancer"></a>
                 </div>
                 <h1 class="pt-5 pb-4">My experience so far</h1>
                 <div class="text-start">
@@ -76,15 +76,15 @@
                         Develops and maintains services handling business logic.
                     </p>
                     <p>
-                    Created both desktop and web applications for internal use by the company.
-                </p>
-            </div>
-            <div class="text-start mt-3 ms-4 ps-2 pt-2 pb-1 background-button rounded-4">
-                <h5>Full-Stack Software Developer</h5>
-            </div>
-            <div class="text-start mt-3">
-                <h3>Freelancer <span class="text-light opacity-25 h5">(9 mos)</span></h3>
-            </div>
+                        Created both desktop and web applications for internal use by the company.
+                    </p>
+                </div>
+                <div class="text-start mt-3 ms-4 ps-2 pt-2 pb-1 background-button rounded-4">
+                    <h5>Full-Stack Software Developer</h5>
+                </div>
+                <div class="text-start mt-3">
+                    <h3>Freelancer <span class="text-light opacity-25 h5">(9 mos)</span></h3>
+                </div>
             </div>
         </div>
     </div>
@@ -94,4 +94,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+
 </html>
