--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr-FR">
+<html lang="en-EN">
 
 <head>
   <meta charset="UTF-8">
@@ -43,7 +43,7 @@
       </menu>
       <div class="col padding-body">
         <div class="row">
-          <div class="col-lg padding-col">
+          <div class="col padding-col">
             <h1>Hi, I'm <span class="text-green">Stratis</span></h1>
             <h6 class="pb-5 text-light opacity-25">Welcome to my page</h6>
             <h6 class="pb-4 pt-5">I’m a <span class="text-green">Senior Software Developer</span> specialising in web
