--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body class="text-white">
     <div class="container ms-0 me-0">
         <div class="row">
-            <menu class="col-3 vh-100 text-center mb-0 pt-4">
+            <menu class="col-3 mh-100 d-none d-md-block text-center mb-0 pt-4">
                 <div class="d-flex flex-column justify-content-between h-100">
                     <div>
                         <img src="./Image/SD logo.png" alt="logo SD">
