--- a/work.html
+++ b/work.html
@@ -13,7 +13,7 @@
 <body class="text-white">
     <div class="container ms-0 me-0">
         <div class="row">
-            <menu class="col-3 mh-100 d-none d-md-block text-center mb-0 pt-4">
+            <menu class="col-3 mh-100 d-none d-lg-block text-center mb-0 pt-4">
                 <div class="d-flex flex-column justify-content-between h-100">
                     <div>
                         <img src="./Image/SD logo.png" alt="logo SD">
@@ -69,7 +69,7 @@
                 <div class="text-start">
                     <h3>MODUS S.A. <span class="text-light opacity-25 h5">(1 yr 9 mos)</span></h3>
                 </div>
-                <div class="text-start mt-4 ms-4 ps-2 pt-2 pb-1 background-button rounded-4">
+                <div class="text-start mt-4 ms-lg-4 ms-0 ps-2 pt-2 pb-1 background-button rounded-4">
                     <h5 class="text-green fw-normal">Senior .NET Developer</h5>
                     <h6 class="text-light opacity-25">MAY 2023 - PRESENT (3 months)</h6>
                     <p class="mb-0">
@@ -79,7 +79,7 @@
                         Created both desktop and web applications for internal use by the company.
                     </p>
                 </div>
-                <div class="text-start mt-3 ms-4 ps-2 pt-2 pb-1 background-button rounded-4">
+                <div class="text-start mt-3 ms-lg-4 ms-0 ps-2 pt-2 pb-1 background-button rounded-4">
                     <h5>Full-Stack Software Developer</h5>
                 </div>
                 <div class="text-start mt-3">
