--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                 <div class="row">
                     <div class="col-lg padding-col text-center">
                         <div>
-                            <img src="./Image/my picture.png" class="rounded" alt="image paysage">
+                            <img src="./Image/my picture.png" class="rounded ps-5 d-none d-lg-block" alt="image paysage">
                         </div>
                         <div class="mt-3">
                             <a class="btn background-button m-1 rounded-3 p-2"
