--- a/aboutthispage.html
+++ b/aboutthispage.html
@@ -13,10 +13,11 @@
 <body class="text-white">
   <div class="container ms-0 me-0">
     <div class="row">
-      <menu class="col-3 mh-100 d-none d-md-block text-center mb-0 pt-4">
+      <a id="menuButton" class="d-lg-none btn background-button text-white text-uppercase p-1">Menu</a>
+      <menu id="menu" class="col-lg-3 vh-100 d-none d-lg-block text-center mb-0 pt-4">
         <div class="d-flex flex-column justify-content-between h-100">
           <div>
-            <img src="./Image/SD logo.png" alt="logo SD">
+            <img src="./Image/SD logo.png" alt="logo SD" class="pb-5">
             <ul class="nav flex-column">
               <li class="nav-item">
                 <a class="nav-link p-2 mb-2 text-start text-white" href="./index.html"><img
@@ -43,7 +44,7 @@
       </menu>
       <div class="col padding-body text-center">
         <h1 class="mt-2 pb-5">About this page</h1>
-        <div class="pt-4">
+        <div class="pt-4 ps-lg-5 ps-0 pe-lg-5 pe-0">
           <p>This page was designed and built by me.</p>
           <p>I always enjoy constructive feedback, positive or negative, and improving my products based on
             that. This is no exception, so feel free to use the links bellow.</p>
@@ -65,6 +66,7 @@
     </div>
   </div>
 </body>
+<script src="./script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
