--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <div class="container ms-0 me-0">
         <div class="row">
             <a id="menuButton" class="d-lg-none btn background-button text-white text-uppercase p-1">Menu</a>
-            <menu id="menu" class="col-lg-3 vh-100 d-none d-lg-block text-center mb-0 pt-4">
+            <menu id="menu" class="col-lg-3 mh-100 d-none d-lg-block text-center mb-0 pt-4">
                 <div class="d-flex flex-column justify-content-between h-100">
                     <div>
                         <img src="./Image/SD logo.png" alt="logo SD" class="pb-5">
@@ -47,7 +47,8 @@
                 <div class="row">
                     <div class="col-lg padding-col text-center">
                         <div>
-                            <img src="./Image/my picture.png" class="rounded ps-5 d-none d-lg-block" alt="image paysage">
+                            <img src="./Image/my picture.png" class="rounded ps-5 d-none d-lg-block"
+                                alt="image paysage">
                         </div>
                         <div class="mt-3">
                             <a class="btn background-button m-1 rounded-3 p-2"
@@ -94,5 +95,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-
 </html>
