--- a/aboutthispage.html
+++ b/aboutthispage.html
@@ -14,7 +14,7 @@
   <div class="container ms-0 me-0">
     <div class="row">
       <a id="menuButton" class="d-lg-none btn background-button text-white text-uppercase p-1">Menu</a>
-      <menu id="menu" class="col-lg-3 vh-100 d-none d-lg-block text-center mb-0 pt-4">
+      <menu id="menu" class="col-lg-3 mh-100 d-none d-lg-block text-center mb-0 pt-4">
         <div class="d-flex flex-column justify-content-between h-100">
           <div>
             <img src="./Image/SD logo.png" alt="logo SD" class="pb-5">
