--- a/aboutthispage.html
+++ b/aboutthispage.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./Style/style.css">
   <title>Portfolio</title>
 </head>
-
+<!-- Menu et nav bar en format mobile -->
 <body class="text-white">
   <div class="container ms-0 me-0">
     <div class="row">
@@ -42,6 +42,7 @@
             <p class="text-light opacity-25">2023 © Stratis Dermanoutsos</p>
           </footer>
       </menu>
+            <!-- Contenu de la page portfolio -->
       <div class="col padding-body text-center">
         <h1 class="mt-2 pb-5">About this page</h1>
         <div class="pt-4 ps-lg-5 ps-0 pe-lg-5 pe-0">
