--- a/work.html
+++ b/work.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./Style/style.css">
     <title>Portfolio</title>
 </head>
+<!-- Menu et nav bar en format mobile -->
 
 <body class="text-white">
     <div class="container ms-0 me-0">
@@ -44,6 +45,8 @@
                         <p class="text-light opacity-25">2023 © Stratis Dermanoutsos</p>
                     </footer>
             </menu>
+            <!-- Contenu de la page portfolio -->
+            <!-- Une seule colonne contenant une certain nombre d'info ainsi que des logo emmenenant au site au qu'elle ils corresponds -->
             <div class="col padding-body text-center">
                 <h1 class="">Want to hire me?</h1>
                 <p>I strive to reply within an hour.</p>
