--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./Style/style.css">
     <title>Portfolio</title>
 </head>
-
+<!-- Menu et nav bar en format mobile -->
 <body class="text-white">
     <div class="container ms-0 me-0">
         <div class="row">
@@ -43,8 +43,10 @@
                         <p class="text-light opacity-25">2023 © Stratis Dermanoutsos</p>
                     </footer>
             </menu>
+                  <!-- Contenu de la page portfolio -->
             <div class="col padding-body">
                 <div class="row">
+                    <!-- Premiere colonne contenant des icons et lien menant au site en question -->
                     <div class="col-lg padding-col text-center">
                         <div>
                             <img src="./Image/my picture.png" class="rounded ps-5 d-none d-lg-block"
@@ -74,6 +76,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Seconde colonne contenant certaine info -->
                     <div class="col-lg padding-col text-center">
                         <h1 class="pb-5 text-start">About me</h1>
                         <br>
