--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./Style/style.css">
   <title>Portfolio</title>
 </head>
-
+<!-- Menu et nav bar en format mobile -->
 <body class="text-white">
   <div class="container ms-0 me-0">
     <div class="row">
@@ -42,8 +42,11 @@
           </footer>
         </div>
       </menu>
+      <!-- Contenu de la page portfolio -->
+      <!-- Premiere colonne contenant deux colonnes -->
       <div class="col padding-body">
         <div class="row">
+          <!-- Premier colonne contenant des informations -->
           <div class="col padding-col">
             <h1>Hi, I'm <span class="text-green">Stratis</span></h1>
             <h6 class="pb-5 text-light opacity-25">Welcome to my page</h6>
@@ -53,6 +56,7 @@
             </h6>
             <h6>I love talking about the world, hobbies and especially code.</h6>
           </div>
+          <!-- Seconde colonne contenant des informations différentes avec des logo qui emmene au site en question -->
           <div class="col-lg padding-col text-center">
             <h1 class="pb-5">Want to hire me?</h1>
             <br>
@@ -63,7 +67,7 @@
               <hr class="col">
               <p class="pt-3 px-4">or</p>
               <hr class="col">
-            </div>
+            </div>            
             <a class="btn background-button me-lg-1 me-0 rounded-3 p-2" href="https://fr.fiverr.com/" target="_blank"
               role="button"><img src="./Image/fiverr-svgrepo-com 1.svg" alt="logo fiverr"></a>
             <a class="btn background-button me-lg-1 me-0 rounded-3 p-2" href="https://fr.linkedin.com/" target="_blank"
